--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://devp1866.github.io/my-portfolio/",
   "name": "my-project",
   "version": "0.1.0",
   "private": true,
@@ -7,9 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d .next"
+    "lint": "next lint"
   },
   "dependencies": {
     "framer-motion": "^12.4.10",
@@ -24,7 +21,6 @@
     "@tailwindcss/postcss": "^4.0.9",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
-    "gh-pages": "^6.3.0",
     "tailwindcss": "^4.0.9"
   }
 }
