--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "framer-motion": "^12.4.10",
-    "next": "15.2.1",
+    "ldrs": "^1.1.6",
+    "next": "^15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
